tests/failed/05-invalid-endian.rs
use endiannezz::Io;

#[derive(Io)]
#[endian(invalid)]
struct Foo;

fn main() {}
